<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.msh.etbm</groupId>
	<artifactId>desktop</artifactId>
	<version>0.8.3</version>
	<packaging>jar</packaging>

	<name>eTB Manager Desktop</name>
	<url>http://www.etbmanager.org/redmine/projects/etbmdesktop</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<developers>
		<developer>
			<id>rmemoria</id>
			<name>Ricardo Memória</name>
			<email>rmemoria@msh.org</email>
			<roles>
				<role>Architect</role>
				<role>Developer</role>
			</roles>
			<organization>MSH</organization>
			<timezone>-3</timezone>
		</developer>
	</developers>

	<repositories>
		<repository>
			<id>central</id>
			<url>http://repo.maven.apache.org/maven2</url>
		</repository>
		<repository>
			<id>rmemoria</id>
			<url>http://www.etbmanager.org/repository</url>
		</repository>
	</repositories>

	<build>
		<finalName>etbmdesktop</finalName>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>**/*</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<!-- Generates a unique build number for the build -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>1.3</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
                    <format>{0,number}</format>
                    <items>
                        <item>buildNumber</item>
                    </items>
					<doCheck>false</doCheck>
					<doUpdate>false</doUpdate>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<descriptor>src/assembly/dep.xml</descriptor>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>1.7</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<mainClass>org.msh.etbm.desktop.app.MainWindow</mainClass>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<SplashScreen-Image>resources/images/logo.png</SplashScreen-Image>
							<Implementation-Build>${buildNumber}</Implementation-Build>
							<Implementation-Version>${project.version}</Implementation-Version>
							<artifact-id>${project.artifactId}</artifact-id>
							<group-id>${project.groupId}</group-id>
							<artifact-version>${project.version}</artifact-version>
						</manifestEntries>
					</archive>
					<finalName>${project.build.finalName}</finalName>
				</configuration>
			</plugin>

			<plugin>
				<groupId>com.google.code.maven-replacer-plugin</groupId>
				<artifactId>replacer</artifactId>
				<version>1.5.2</version>
				<executions>
					<execution>
						<phase>prepare-package</phase>
						<goals>
							<goal>replace</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<file>target/classes/app.inf</file>
					<outputFile>target/app.inf</outputFile>
					<replacements>
						<replacement>
							<token>%VERSION%</token>
							<value>${project.version}</value>
						</replacement>
						<replacement>
							<token>%GROUPID%</token>
							<value>${project.groupId}</value>
						</replacement>
						<replacement>
							<token>%ARTIFACTID%</token>
							<value>${project.artifactId}</value>
						</replacement>
					</replacements>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.6</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<version>1.5.2</version>
				<executions>
					<execution>
						<id>l4j-gui</id>
						<phase>package</phase>
						<goals>
							<goal>launch4j</goal>
						</goals>
						<configuration>
							<icon>resources/logo.ico</icon>
							<headerType>gui</headerType>
							<outfile>target/${project.build.finalName}.exe</outfile>
							<jar>target/${project.build.finalName}.jar</jar>
							<errTitle>eTBManager: Error</errTitle>
							<classPath>
								<mainClass>org.msh.etbm.desktop.app.MainWindow</mainClass>
							</classPath>
							<jre>
								<minVersion>1.6.0</minVersion>
							</jre>
							<splash>
								<file>resources/logo.bmp</file>
								<timeout>5</timeout>
							</splash>
							<versionInfo>
								<fileVersion>${project.version}.0</fileVersion>
								<txtFileVersion>eTB Manager Desktop ${project.version}</txtFileVersion>
								<copyright>Management Science for Health</copyright>
								<productVersion>${project.version}.0</productVersion>
								<txtProductVersion>eTB Manager ${project.version}</txtProductVersion>
								<productName>eTB Manager Desktop</productName>
								<internalName>eTBManager</internalName>
								<originalFilename>etbmapp-${project.version}.exe</originalFilename>
								<fileDescription>eTB Manager Desktop version</fileDescription>
							</versionInfo>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<show>private</show>
					<doctitle>eTB Manager Desktop version ${project.version}</doctitle>
				</configuration>
			</plugin>

			<!-- Sonar plugin -->
			<!--
                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>sonar-maven-plugin</artifactId>
                            <version>2.0</version>
                            <configuration>
                                <properties>
                                    <sonar.includedModules>src/main/java</sonar.includedModules>
                                </properties>
                            </configuration>
                          </plugin>
            -->

		</plugins>

		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-dependency-plugin
										</artifactId>
										<versionRange>
											[2.6,)
										</versionRange>
										<goals>
											<goal>
												copy-dependencies
											</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.6</version>
			</plugin>

			<!-- Generate reports about testing results -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.13</version>
				<configuration>
					<argLine>-Xmx1524m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>


			<!-- Generate javadoc for the project -->
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<show>private</show>
					<doctitle>eTB Manager Desktop version ${project.version}</doctitle>
				</configuration>
			</plugin>

			<!-- Required by PMD and CPD -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>2.3</version>
			</plugin>

			<!-- Generate "PMD" and "CPD" reports -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>2.7.1</version>
				<configuration>
					<linkXref>true</linkXref>
					<sourceEncoding>utf-8</sourceEncoding>
					<minimumTokens>100</minimumTokens>
					<targetJdk>1.5</targetJdk>
				</configuration>
			</plugin>

			<!-- Check localization standards compliance -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>l10n-maven-plugin</artifactId>
				<version>1.0-alpha-2</version>
				<configuration>
					<locales>
						<locale>en</locale>
						<locale>pt_BR</locale>
						<locale>ru</locale>
						<locale>in</locale>
						<locale>vi</locale>
					</locales>
				</configuration>
			</plugin>

			<!-- Check for minimum documentation standards -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-docck-plugin</artifactId>
				<version>1.0</version>
			</plugin>

			<!-- Findbug plugin tries to find potential bugs in the project -->
			<!-- 			<plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>findbugs-maven-plugin</artifactId>
                            <version>2.5.3-SNAPSHOT</version>
                        </plugin>
             -->

			<!-- JDEpendent plugin - generate dependencies report -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jdepend-maven-plugin</artifactId>
			</plugin>
		</plugins>

	</reporting>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.1.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>3.1.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.8.0</version>
		</dependency>
		<dependency>
			<groupId>org.swinglabs</groupId>
			<artifactId>swingx</artifactId>
			<version>0.9.7</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>3.1.0.RELEASE</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>3.1.0.RELEASE</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>com.toedter</groupId>
			<artifactId>jcalendar</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>3.1.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>3.1.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.6.4</version>
		</dependency>
		<dependency>
			<groupId>cglib</groupId>
			<artifactId>cglib</artifactId>
			<version>2.2.2</version>
		</dependency>
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>2.2.8</version>
		</dependency>
		<dependency>
			<groupId>com.github.insubstantial</groupId>
			<artifactId>substance</artifactId>
			<version>7.2.1</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.2</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate</artifactId>
			<version>3.3.0.SP1</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>3.1.0.GA</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>3.4.0.GA</version>
		</dependency>
		<dependency>
			<groupId>com.miglayout</groupId>
			<artifactId>miglayout-swing</artifactId>
			<version>4.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.axis</groupId>
			<artifactId>axis</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>javax.xml</groupId>
			<artifactId>jaxrpc-api</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>commons-discovery</groupId>
			<artifactId>commons-discovery</artifactId>
			<version>0.5</version>
		</dependency>
		<dependency>
			<groupId>axis</groupId>
			<artifactId>axis-wsdl4j</artifactId>
			<version>1.5.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore</artifactId>
			<version>4.2.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpmime</artifactId>
			<version>4.2.5</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.2.5</version>
		</dependency>
        <!-- Marshall/unmarshall object to/from XML -->
		<dependency>
			<groupId>com.rmemoria</groupId>
			<artifactId>datastream</artifactId>
			<version>1.1.8</version>
		</dependency>
		<dependency>
			<groupId>de.odysseus.juel</groupId>
			<artifactId>juel-impl</artifactId>
			<version>2.2.6</version>
		</dependency>
		<dependency>
			<groupId>de.odysseus.juel</groupId>
			<artifactId>juel-api</artifactId>
			<version>2.2.6</version>
		</dependency>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4</version>
		</dependency>
	</dependencies>
	<organization>
		<name>Management Sciences for Health, Inc</name>
		<url>www.msh.org</url>
	</organization>
	<issueManagement>
		<url>http://www.etbmanager.org/redmine/projects/etbmdesktop/issues</url>
		<system>Redmine</system>
	</issueManagement>
	<ciManagement>
		<system>Jenkins</system>
		<url>http://dev.etbmanager.org/jenkins</url>
	</ciManagement>
	<description>eTB Manager Desktop version for running as a stand alone database app in any Java SE compliant operating system (Windows, Linux, MacOS, etc).

		The desktop version aims to work on health units with Internet </description>
	<scm>
		<connection>scm:git:http://rmemoria@git.rmemoria.com/gitblit/git/etbm/desktop.git</connection>
		<url>https://www.etbmanager.org/svn_desktop/trunk</url>
	</scm>
</project>
